# EXTENDED_AVELLANEDA_DATA_COLLECTOR_SPREAD_CALCULATOR_BACKTESTER

./: .env.example  .gitignore  AGENTS.md  BACKTEST_FIXES_SUMMARY.md  BACKTEST_REVIEW.md  CLAUDE.md  COMPRESSION_UPGRADE.md  Cargo.toml  Dockerfile  GEMINI.md  GRID_SEARCH_GUIDE.md  PROBLEMS.md  README.md  analyze_trades.py  backtest_gap_final.txt  backtest_gap_test.txt  backtest_initial_warmup.txt  backtest_output.txt  build_error.txt  build_error_spread.txt  check_error.txt  check_error_2.txt  check_error_3.txt  check_error_4.txt  check_output.txt  config.json  docker-compose.md  docker-compose.yml
.claude/: settings.local.json
data/btc_usd/: gaps.csv
data/eth_usd/: as_results.csv  backtest_results.csv  gaps.csv  trades.csv
data/eth_usd/orderbook_parts/: part_1763919770230_0000700175_000007.parquet  part_1763941797319_0000000001_000000.parquet  part_1763941825630_0000000587_000001.parquet  part_1763941855631_0000000879_000002.parquet  part_1763941920558_0000000001_000000.parquet  part_1763941949235_0000000627_000001.parquet  part_1763941979231_0000000916_000002.parquet  part_1763942009233_0000001205_000003.parquet  part_1763942039230_0000001490_000004.parquet  part_1763942069233_0000001781_000005.parquet  (+1 more)
examples/: verify_parquet_integrity.rs  verify_parquet_processing.rs
src/: backtest_engine.rs  calibration.rs  calibration_engine.rs  data_collection_task.rs  data_collector.rs  data_loader.rs  error.rs  lib.rs  metrics.rs  model_types.rs  rest.rs  spread_model.rs  types.rs  websocket.rs
src/storage/: mod.rs  parquet_writer.rs
