[package]
name = "extended_data_collector"
version = "0.1.0"
edition = "2021"
authors = ["Extended Data Collector Contributors"]
description = "Data collector for Extended DEX - collects orderbook depth and trades to CSV"
license = "MIT"
keywords = ["trading", "data-collection", "starknet", "perpetuals", "crypto"]
categories = ["api-bindings", "finance"]
default-run = "collect_data"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
url = "2.5"
dotenv = "0.15"
chrono = "0.4"
csv = "1.3"

[dev-dependencies]
tokio-test = "0.4"

# Data collection binary
[[bin]]
name = "collect_data"
path = "src/bin/collect_data.rs"
